--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+#spring.datasource.url=jdbc:mysql://localhost:3306/ucan_db?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+#spring.datasource.username=user
+#spring.datasource.password=UserPW1.
 
+spring.datasource.url=jdbc:mysql://localhost:3306/ucan_db_test?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username=user_test
+spring.datasource.password=TestPW1.
+
+#Hibernate
+spring.jpa.properties.dialect = org.hibernate.dialect.MySQL5Dialect
+
+#Hibernate auto ddl
+spring.jpa.hibernate.ddl-auto=update
+
+logging.level.org.hibernate.SQL=DEBUG
