--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,5 @@ logging.level.org.hibernate.type=TRACE
 
 #preferences
 spring.output.ansi.enabled=ALWAYS
+
+spring.main.allow-circular-references=true
