--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,9 @@ spring.jpa.properties.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
+
+#preferences
+spring.output.ansi.enabled=ALWAYS
+
+spring.main.allow-circular-references=true
