--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #spring.datasource.username=user
 #spring.datasource.password=UserPW1.
 
-spring.datasource.url=jdbc:mysql://localhost:3306/ucan_db_test?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://localhost:3306/ucan_db_test?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=True
 spring.datasource.username=user_test
 spring.datasource.password=TestPW1.
 
